# eIDClientCore

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  configure.ac
CMake-Modules/: FindCrypto++.cmake  FindEXPAT.cmake  FindLibDL.cmake  FindPCSC.cmake
android/: Makefile
eIDClientCore/: CMakeLists.txt  INSTALL_OS_X  Makefile.am  configure.ac
eIDClientCore/android/: GNUmakefile-android.patch  Makefile
eIDClientCore/android/eIDCCAusweisApp2/: .classpath  .project  AndroidManifest.xml  Makefile  README.md  local.properties  project.properties
eIDClientCore/android/eIDCCAusweisApp2/.fdroid/metadata/: de.bdr.eidcc.eidccausweisapp2.txt
eIDClientCore/android/eIDCCAusweisApp2/res/layout/: activity_main.xml  activity_show_results.xml  chat.xml
eIDClientCore/android/eIDCCAusweisApp2/res/menu/: main.xml  perform_eac.xml  show_results.xml
eIDClientCore/android/eIDCCAusweisApp2/res/values/: strings.xml
eIDClientCore/android/eIDCCAusweisApp2/src/de/bdr/eidcc/eidccausweisapp2/: CookieContext.java  GetWebPage.java  MainActivity.java  NPAReader.java  ShowResultsActivity.java  TcToken.java  eIDCCTestcase.java  eIDCCTestcaseAusweisApp2.java
eIDClientCore/android/eIDClientCore Selbstauskunft/: .project  AndroidManifest.xml  README.md
eIDClientCore/android/eIDClientCore Selbstauskunft/.fdroid/metadata/: de.bdr.eidcc.eidcc_selbstauskunft.txt
eIDClientCore/android/eIDClientCore Selbstauskunft/res/layout/: activity_main.xml  activity_show_results.xml  chat.xml  errors.xml
eIDClientCore/android/eIDClientCore Selbstauskunft/res/values/: strings.xml
eIDClientCore/android/eIDClientCore Selbstauskunft/src/de/bdr/eidcc/eIDClientCore Selbstauskunft/: CookieContext.java  GetWebPage.java  MainActivity.java  NPAReader.java  ShowResultsActivity.java  TcToken.java  eIDCCTestcase.java  eIDCCTestcaseAusweisApp2.java
eIDClientCore/android/eIDClientLib/: .project  AndroidManifest.xml
eIDClientCore/android/eIDClientLib/jni/: Android.mk  de_bdr_eidclient_EIdSession.cpp  de_bdr_eidclient_external_reader.cpp  deps.mk
eIDClientCore/android/eIDClientLib/src/de/bdr/: reader
eIDClientCore/android/eIDClientLib/src/de/bdr/eidclient/: UserInput.java
eIDClientCore/android/reader/java/reader/: Reader.java
eIDClientCore/android/reader/java/readerimpl/: CyberJackReader.java  NFCReader.java  NFCWatchDog.java  Util.java
eIDClientCore/android/reader/jni/: Android.mk  de_bdr_eidclient_external_reader.cpp  de_bdr_eidclient_external_reader.h
eIDClientCore/lib/: CMakeLists.txt  Makefile.am  crypto.h  debug.c  debug.h  loadlib.h  testing.c  testing.h
eIDClientCore/lib/eCardCore/: CMakeLists.txt  CardCommand.cpp  CardCommand.h  ExternalManager.h  ExternalReader.cpp  ExternalReader.h  ICard.cpp  ICard.h  IReader.cpp  PCSCReader.cpp  eCardStatus.h  eIdClientCardReader.cpp  eIdClientCardReader.h  externalReaderd.def  pace_reader.h
eIDClientCore/lib/eIDClientConnection/: CMakeLists.txt  Makefile.am  eIDClientConnection.c  eIDClientConnection.def  eIDClientConnection.h
eIDClientCore/lib/eIDClientCore/: CMakeLists.txt  Makefile.am  eIDClientCore.cpp  eIDClientCore.def  eIDClientCore.h  eIDClientCored.def  eIDECardClientPAOS.cpp  eIDECardClientPAOS.h  eIDUtils.cpp  eIDUtils.h  nPAClient.h
eIDClientCore/lib/eidasn1/: CMakeLists.txt  Makefile.am  eIDHelper.h  eIDOID.h
eIDClientCore/lib/nPA-EAC/: CMakeLists.txt  nPAAPI.h  nPACard.cpp  nPACard.h  nPACommon.cpp  nPACommon.h  nPAStatus.h  nPA_CA.cpp  nPA_PACE.cpp  nPA_TA.cpp
eIDClientCore/winbuild/: eIDClientVS2012.sln
eIDClientCore/winbuild/SimpleClient/: SimpleClient.vcxproj
eIDClientCore/winbuild/Test_nPAClientLib/: Test_nPAClientLib.vcxproj
eIDClientCore/winbuild/eCardCore/: eCardCore.vcxproj
eIDClientCore/winbuild/eIDClientConnection/: eIDClientConnection.vcxproj
eIDClientCore/winbuild/eIDClientCore/: eIDClientCore.vcxproj
eIDClientCore/winbuild/eidasn1/: eIDASN1.vcxproj
eIDClientCore/winbuild/nPA-EAC/: nPA-EAC.vcxproj
lib/: Makefile.am  debug.h
lib/eCard-API/: Makefile.am  eIdClientCore.def  eIdClientCoreLib.cpp  eIdClientCoreLib.h  eIdECardClient.cpp  eIdECardClient.h  ePAClientProtocol.cpp  ePAClientProtocol.h  nPAClient.cpp  nPAClient.h
lib/eCardCore/: CardCommand.cpp  CardCommand.h  ExternalReader.cpp  ExternalReader.h  ICard.cpp  ICard.h  ICardDetector.h  IReader.h  IReaderManager.h  Makefile.am  PCSCManager.cpp  PCSCManager.h  PCSCReader.cpp  PCSCReader.h  Transceiver.h  eCardCore.cpp  eCardCore.h  eCardCore_intern.h  eCardStatus.h  eCardTypes.h  eIdClientCardReader.cpp  eIdClientCardReader.h  externalReader.def  pace_reader.cpp
lib/eIDClientConnection/: Makefile.am  eIDClientConnection.c  eIDClientConnection.cpp  eIDClientConnection.def  eIDClientConnection.h  eIDClientConnectiond.def  gnutls-2.10.2-fix-autoreconf-with-automake-1.12.patch  gnutls-2.10.2-fix-autoreconf-with-automake-1.13.patch  gnutls-2.10.2-fix-compile-with-glibc-2.16.patch  gnutls-2.10.2_add_rsa_psk.patch  gnutls.c  socket.c
lib/eIDClientCore/: Makefile.am  eIDClientCore.cpp  eIDClientCore.def  eIDClientCore.h  eIDClientCored.def  eIDECardClient.cpp  eIDECardClient.h  eIDECardClientPAOS.cpp  eIDECardClientPAOS.h  eIDUtils.cpp  eIDUtils.h  eIdClientCoreLib.cpp  eIdClientCoreLib.h  eIdClientCored.def  eIdECardClient.cpp  eIdUtils.h  ePAClientProtocol.cpp  ePAClientProtocol.h  nPAClient.cpp  nPAClient.h  nPAClientProtocol.cpp  nPAClientProtocol.h
lib/epa-api/: Makefile.am  ePAAPI.cpp  ePAAPI.h  ePAAPI_internal.h  ePACard.cpp  ePACard.h  ePACommon.cpp  ePACommon.h  ePAStatus.h  ePA_CA.cpp  ePA_PACE.cpp  ePA_TA.cpp
lib/nPA-EAC/: Makefile.am  nPAAPI.cpp  nPAAPI.h  nPACard.cpp  nPACard.h  nPACommon.cpp  nPACommon.h  nPAStatus.h  nPA_CA.cpp  nPA_PACE.cpp  nPA_TA.cpp
lib/nPAClientECardLib/: Makefile.am  eIdClientCoreLib.cpp  eIdClientCoreLib.def  eIdClientCoreLib.h  eIdClientCoreLibd.def  eIdECardClient.cpp  eIdECardClient.h  eIdUtils.cpp  eIdUtils.h  ePAClientProtocol.cpp  ePAClientProtocol.h  nPAClient.cpp  nPAClient.h
winbuild/: eIDClientVS2012.sln
(+33 files in other folders)
